--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
     "express": "^4.21.2",
     "socket.io": "^4.8.1",
     "systeminformation": "^5.25.11"
+  },
+  "scripts": {
+    "dev": "nodemon app --port 3001"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
